Revision history for {{$dist->name}}:

{{$NEXT}}

v0.6.1    2022-04-06 16:40:46+01:00 Europe/London
  [Enhancements]
  - Add .lz, .tgz and .xz to the archive_extensions rule.

  [Documentation]
  - Add version when newer rules were added.

  - Fix encoding of links in README.

  [Tests]
  - Test more blocked archive extensions.

v0.6.0    2022-02-18 18:29:34+00:00 Europe/London
  [Documentation]
  - Fix typo in Plack::Middleware::Security::Common ABSTRACT!

v0.5.1    2022-02-18 18:20:32+00:00 Europe/London
  [Enhancements]
  - Add fake_extensions and protocol_in_path_or_referer rules.

  [Documentation]
  - Bump copyright year.

  - Fix typo in Plack::Middleware::Security::Common POD.

  - Added note that this will not protect against exploits on proxies
    that are in front of the PSGI application.

v0.5.0    2021-10-19 16:55:34+01:00 Europe/London
  [Enhancements]
  - Add .yml files to the misc_extensions rule.

  - Add .mv and .mvc to the script_extensions rule.

  - Add ip_address_referer rule.

  [Documentation]
  - Gave an example of adding an exception to a rule, GH#3.

  [Tests]
  - Add text cases.

v0.4.4    2021-04-21 16:45:59+01:00 Europe/London
  [Enhancements]
  - Add more file extensions to script_extensions rule.

  [Tests]
  - Add author tests.

v0.4.3    2021-04-09 16:39:01+01:00 Europe/London
  [Enhancements]
  - Add more file extensions to script_extensions rule.

  - Add more extensions to the misc_extensions rule.

  [Documentation]
  - Bump copyright year.

v0.4.2    2020-07-31 14:35:48+01:00 Europe/London
  [Toolchain]
  - Add core modules in the prerequisites.

v0.4.1    2020-03-11 12:19:20+00:00 Europe/London
  [Enhancements]
  - Simplify unexpected_content rule.

  - New rule: require_content.

  - Updated rule: cgi_bin to incldue cgi_wrapper.

  - Updated rule: dot_files to include "../" in path or query string.

  - The HTTP status can be overridden without overriding the handler.
