@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}:
 
 {{$NEXT}}
+  [Enhancements]
+  - Add header_injection rule.
 
 v0.6.1    2022-04-06 16:40:46+01:00 Europe/London
   [Enhancements]
